--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "react-live-clock": "^5.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-select": "^4.3.0",
+    "styled-components": "^5.3.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
